output/XGDParser.java
// $ANTLR 3.3 Nov 30, 2010 12:45:30 C:\\Users\\quent\\Desktop\\TPcin\\TP2\\XGD.g 2017-11-12 19:43:35
package parser;
import java.util.HashMap;
import Lib3d.*;
import Lib3d.GlSceneGraph.*;
import Lib3d.Loader.*;
import Lib3d.SceneGraph.*;

import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

import org.antlr.runtime.debug.*;
import java.io.IOException;
public class XGDParser extends DebugParser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "ID", "INT", "EXPONENT", "FLOAT", "COMMENT", "WS", "ESC_SEQ", "STRING", "CHAR", "HEX_DIGIT", "UNICODE_ESC", "OCTAL_ESC", "'-'", "'Transform'", "';'", "'type'", "'='", "'nom'", "'Translation'", "'{'", "','", "'}'", "'Rotation'", "'Scale'", "'Group'", "'Geometry'", "'Cone'", "'Material'", "':'", "'Sphere'", "'Cylinder'", "'Cube'", "'Teapot'", "'Tetrahedron'", "'Torus'", "'Ka'", "'Kd'", "'Ks'", "'d'", "'Ns'", "'textureScale'", "'textureFile'", "'<'", "'>'", "'/'", "'Root'", "'('", "')'", "'*'", "'+'"
    };
    public static final int EOF=-1;
    public static final int T__16=16;
    public static final int T__17=17;
    public static final int T__18=18;
    public static final int T__19=19;
    public static final int T__20=20;
    public static final int T__21=21;
    public static final int T__22=22;
    public static final int T__23=23;
    public static final int T__24=24;
    public static final int T__25=25;
    public static final int T__26=26;
    public static final int T__27=27;
    public static final int T__28=28;
    public static final int T__29=29;
    public static final int T__30=30;
    public static final int T__31=31;
    public static final int T__32=32;
    public static final int T__33=33;
    public static final int T__34=34;
    public static final int T__35=35;
    public static final int T__36=36;
    public static final int T__37=37;
    public static final int T__38=38;
    public static final int T__39=39;
    public static final int T__40=40;
    public static final int T__41=41;
    public static final int T__42=42;
    public static final int T__43=43;
    public static final int T__44=44;
    public static final int T__45=45;
    public static final int T__46=46;
    public static final int T__47=47;
    public static final int T__48=48;
    public static final int T__49=49;
    public static final int T__50=50;
    public static final int T__51=51;
    public static final int T__52=52;
    public static final int T__53=53;
    public static final int ID=4;
    public static final int INT=5;
    public static final int EXPONENT=6;
    public static final int FLOAT=7;
    public static final int COMMENT=8;
    public static final int WS=9;
    public static final int ESC_SEQ=10;
    public static final int STRING=11;
    public static final int CHAR=12;
    public static final int HEX_DIGIT=13;
    public static final int UNICODE_ESC=14;
    public static final int OCTAL_ESC=15;

    // delegates
    // delegators

    public static final String[] ruleNames = new String[] {
        "invalidRule", "sphere", "translation", "geometry", "cone", "transform", 
        "group", "tetrahedron", "couleur", "torus", "nombre", "syntaxe", 
        "scale", "root", "animation", "teapot", "cylinder", "operande", 
        "rotation", "expMult", "expre", "expPlus", "cube"
    };
    public static final boolean[] decisionCanBacktrack = new boolean[] {
        false, // invalid decision
        false, false, false, false, false, false, false, false, false, 
            false, false, false, false, false, false, false, false, false, 
            false, false, false, false, false, false, false, false, false
    };

     
        public int ruleLevel = 0;
        public int getRuleLevel() { return ruleLevel; }
        public void incRuleLevel() { ruleLevel++; }
        public void decRuleLevel() { ruleLevel--; }
        public XGDParser(TokenStream input) {
            this(input, DebugEventSocketProxy.DEFAULT_DEBUGGER_PORT, new RecognizerSharedState());
        }
        public XGDParser(TokenStream input, int port, RecognizerSharedState state) {
            super(input, state);
            DebugEventSocketProxy proxy =
                new DebugEventSocketProxy(this, port, null);
            setDebugListener(proxy);
            try {
                proxy.handshake();
            }
            catch (IOException ioe) {
                reportError(ioe);
            }
        }
    public XGDParser(TokenStream input, DebugEventListener dbg) {
        super(input, dbg, new RecognizerSharedState());

    }
    protected boolean evalPredicate(boolean result, String predicate) {
        dbg.semanticPredicate(result, predicate);
        return result;
    }


    public String[] getTokenNames() { return XGDParser.tokenNames; }
    public String getGrammarFileName() { return "C:\\Users\\quent\\Desktop\\TPcin\\TP2\\XGD.g"; }


      HashMap<String,AbstractGeometry> mapi= new HashMap();
      HashMap<String,Material> mapmat= new HashMap();
      HashMap<String,Lib3d.GlSceneGraph.Group> mapgroup= new HashMap();
      public static Lib3d.GlSceneGraph.Group root = new Lib3d.GlSceneGraph.Group();
      Lib3d.GlSceneGraph.Group currentNode = root;
      java.util.Stack<Lib3d.GlSceneGraph.Group> stack = new java.util.Stack<Lib3d.GlSceneGraph.Group>();
      public static HashMap<String, Float> expressmap = new HashMap();
      public static HashMap<Lib3d.GlSceneGraph.Translation, String[]> transmap = new java.util.HashMap();
      public static HashMap<Lib3d.GlSceneGraph.Rotation, String[]> rotamap = new java.util.HashMap();
      public static HashMap<Lib3d.GlSceneGraph.Scale, String[]> scamap = new java.util.HashMap();
      String expression;
      float resultat;


    public static class nombre_return extends ParserRuleReturnScope {
    };

    // $ANTLR start "nombre"
    // C:\\Users\\quent\\Desktop\\TPcin\\TP2\\XGD.g:84:1: nombre : ( '-' )? ( INT | FLOAT ) ;
    public final XGDParser.nombre_return nombre() throws RecognitionException {
        XGDParser.nombre_return retval = new XGDParser.nombre_return();
        retval.start = input.LT(1);

        try { dbg.enterRule(getGrammarFileName(), "nombre");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(84, 1);

        try {
            // C:\\Users\\quent\\Desktop\\TPcin\\TP2\\XGD.g:84:8: ( ( '-' )? ( INT | FLOAT ) )
            dbg.enterAlt(1);

            // C:\\Users\\quent\\Desktop\\TPcin\\TP2\\XGD.g:84:10: ( '-' )? ( INT | FLOAT )
            {
            dbg.location(84,10);
            // C:\\Users\\quent\\Desktop\\TPcin\\TP2\\XGD.g:84:10: ( '-' )?
            int alt1=2;
            try { dbg.enterSubRule(1);
            try { dbg.enterDecision(1, decisionCanBacktrack[1]);

            int LA1_0 = input.LA(1);

            if ( (LA1_0==16) ) {
                alt1=1;
            }
            } finally {dbg.exitDecision(1);}

            switch (alt1) {
                case 1 :
                    dbg.enterAlt(1);

                    // C:\\Users\\quent\\Desktop\\TPcin\\TP2\\XGD.g:84:10: '-'
                    {
                    dbg.location(84,10);
                    match(input,16,FOLLOW_16_in_nombre569); 

                    }
                    break;

            }
            } finally {dbg.exitSubRule(1);}

            dbg.location(84,14);
            if ( input.LA(1)==INT||input.LA(1)==FLOAT ) {
                input.consume();
                state.errorRecovery=false;
            }
            else {
                MismatchedSetException mse = new MismatchedSetException(null,input);
                dbg.recognitionException(mse);
                throw mse;
            }


            }

            retval.stop = input.LT(-1);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        dbg.location(84, 25);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "nombre");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return retval;
    }
    // $ANTLR end "nombre"


    // $ANTLR start "transform"
    // C:\\Users\\quent\\Desktop\\TPcin\\TP2\\XGD.g:87:1: transform : 'Transform' ';' 'type' '=' ( translation | rotation | scale )+ ';' 'nom' '=' STRING ';' ;
    public final void transform() throws RecognitionException {
        try { dbg.enterRule(getGrammarFileName(), "transform");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(87, 1);

        try {
            // C:\\Users\\quent\\Desktop\\TPcin\\TP2\\XGD.g:87:11: ( 'Transform' ';' 'type' '=' ( translation | rotation | scale )+ ';' 'nom' '=' STRING ';' )
            dbg.enterAlt(1);

            // C:\\Users\\quent\\Desktop\\TPcin\\TP2\\XGD.g:90:3: 'Transform' ';' 'type' '=' ( translation | rotation | scale )+ ';' 'nom' '=' STRING ';'
            {
            dbg.location(90,3);
            match(input,17,FOLLOW_17_in_transform589); 
            dbg.location(90,14);
            match(input,18,FOLLOW_18_in_transform590); 
            dbg.location(90,17);
            match(input,19,FOLLOW_19_in_transform591); 
            dbg.location(90,23);
            match(input,20,FOLLOW_20_in_transform592); 
            dbg.location(90,27);
            // C:\\Users\\quent\\Desktop\\TPcin\\TP2\\XGD.g:90:27: ( translation | rotation | scale )+
            int cnt2=0;
            try { dbg.enterSubRule(2);

            loop2:
            do {
                int alt2=4;
                try { dbg.enterDecision(2, decisionCanBacktrack[2]);

                switch ( input.LA(1) ) {
                case 22:
                    {
                    alt2=1;
                    }
                    break;
                case 26:
                    {
                    alt2=2;
                    }
                    break;
                case 27:
                    {
                    alt2=3;
                    }
                    break;

                }

                } finally {dbg.exitDecision(2);}

                switch (alt2) {
            	case 1 :
            	    dbg.enterAlt(1);

            	    // C:\\Users\\quent\\Desktop\\TPcin\\TP2\\XGD.g:90:28: translation
            	    {
            	    dbg.location(90,28);
            	    pushFollow(FOLLOW_translation_in_transform595);
            	    translation();

            	    state._fsp--;


            	    }
            	    break;
            	case 2 :
            	    dbg.enterAlt(2);

            	    // C:\\Users\\quent\\Desktop\\TPcin\\TP2\\XGD.g:90:42: rotation
            	    {
            	    dbg.location(90,42);
            	    pushFollow(FOLLOW_rotation_in_transform599);
            	    rotation();

            	    state._fsp--;


            	    }
            	    break;
            	case 3 :
            	    dbg.enterAlt(3);

            	    // C:\\Users\\quent\\Desktop\\TPcin\\TP2\\XGD.g:90:53: scale
            	    {
            	    dbg.location(90,53);
            	    pushFollow(FOLLOW_scale_in_transform603);
            	    scale();

            	    state._fsp--;


            	    }
            	    break;

            	default :
            	    if ( cnt2 >= 1 ) break loop2;
                        EarlyExitException eee =
                            new EarlyExitException(2, input);
                        dbg.recognitionException(eee);

                        throw eee;
                }
                cnt2++;
            } while (true);
            } finally {dbg.exitSubRule(2);}

            dbg.location(90,61);
            match(input,18,FOLLOW_18_in_transform607); 
            dbg.location(90,64);
            match(input,21,FOLLOW_21_in_transform608); 
            dbg.location(90,69);
            match(input,20,FOLLOW_20_in_transform609); 
            dbg.location(90,73);
            match(input,STRING,FOLLOW_STRING_in_transform611); 
            dbg.location(90,80);
            match(input,18,FOLLOW_18_in_transform613); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        dbg.location(90, 83);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "transform");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return ;
    }
    // $ANTLR end "transform"


    // $ANTLR start "translation"
    // C:\\Users\\quent\\Desktop\\TPcin\\TP2\\XGD.g:92:1: translation : 'Translation' '{' coordx= animation ',' coordy= animation ',' coordz= animation '}' ;
    public final void translation() throws RecognitionException {
        String coordx = null;

        String coordy = null;

        String coordz = null;


        try { dbg.enterRule(getGrammarFileName(), "translation");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(92, 1);

        try {
            // C:\\Users\\quent\\Desktop\\TPcin\\TP2\\XGD.g:93:2: ( 'Translation' '{' coordx= animation ',' coordy= animation ',' coordz= animation '}' )
            dbg.enterAlt(1);

            // C:\\Users\\quent\\Desktop\\TPcin\\TP2\\XGD.g:93:4: 'Translation' '{' coordx= animation ',' coordy= animation ',' coordz= animation '}'
            {
            dbg.location(93,4);
            match(input,22,FOLLOW_22_in_translation625); 
            dbg.location(93,17);
            match(input,23,FOLLOW_23_in_translation626); 
            dbg.location(93,26);
            pushFollow(FOLLOW_animation_in_translation629);
            coordx=animation();

            state._fsp--;

            dbg.location(93,36);
            String x = expression;
            dbg.location(94,10);
            match(input,24,FOLLOW_24_in_translation641); 
            dbg.location(94,19);
            pushFollow(FOLLOW_animation_in_translation644);
            coordy=animation();

            state._fsp--;

            dbg.location(94,29);
            String y = expression;
            dbg.location(95,10);
            match(input,24,FOLLOW_24_in_translation656); 
            dbg.location(95,19);
            pushFollow(FOLLOW_animation_in_translation659);
            coordz=animation();

            state._fsp--;

            dbg.location(95,29);
            String z = expression;
            dbg.location(96,10);
            match(input,25,FOLLOW_25_in_translation671); 
            dbg.location(96,13);
            Vector3d vector_translation = new Vector3d(Float.valueOf(coordx),Float.valueOf(coordy),Float.valueOf(coordz));
            			      Lib3d.GlSceneGraph.Translation node_translation = new Lib3d.GlSceneGraph.Translation(vector_translation);
            			      currentNode.addChild(node_translation); 
            			      currentNode = node_translation; 
            			      String[] translations = {x,y,z};
            			      transmap.put(node_translation,translations);
            			      stack.push(node_translation);

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        dbg.location(102, 40);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "translation");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return ;
    }
    // $ANTLR end "translation"


    // $ANTLR start "rotation"
    // C:\\Users\\quent\\Desktop\\TPcin\\TP2\\XGD.g:104:1: rotation : 'Rotation' '{' coordx= animation ',' coordy= animation ',' coordz= animation ',' ang= animation '}' ;
    public final void rotation() throws RecognitionException {
        String coordx = null;

        String coordy = null;

        String coordz = null;

        String ang = null;


        try { dbg.enterRule(getGrammarFileName(), "rotation");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(104, 1);

        try {
            // C:\\Users\\quent\\Desktop\\TPcin\\TP2\\XGD.g:104:9: ( 'Rotation' '{' coordx= animation ',' coordy= animation ',' coordz= animation ',' ang= animation '}' )
            dbg.enterAlt(1);

            // C:\\Users\\quent\\Desktop\\TPcin\\TP2\\XGD.g:104:11: 'Rotation' '{' coordx= animation ',' coordy= animation ',' coordz= animation ',' ang= animation '}'
            {
            dbg.location(104,11);
            match(input,26,FOLLOW_26_in_rotation680); 
            dbg.location(104,23);
            match(input,23,FOLLOW_23_in_rotation683); 
            dbg.location(104,32);
            pushFollow(FOLLOW_animation_in_rotation686);
            coordx=animation();

            state._fsp--;

            dbg.location(104,42);
            String x= expression;
            dbg.location(105,10);
            match(input,24,FOLLOW_24_in_rotation698); 
            dbg.location(105,19);
            pushFollow(FOLLOW_animation_in_rotation701);
            coordy=animation();

            state._fsp--;

            dbg.location(105,29);
            String y=expression;
            dbg.location(106,10);
            match(input,24,FOLLOW_24_in_rotation713); 
            dbg.location(106,19);
            pushFollow(FOLLOW_animation_in_rotation716);
            coordz=animation();

            state._fsp--;

            dbg.location(106,29);
            String z=expression;
            dbg.location(107,10);
            match(input,24,FOLLOW_24_in_rotation728); 
            dbg.location(107,16);
            pushFollow(FOLLOW_animation_in_rotation731);
            ang=animation();

            state._fsp--;

            dbg.location(107,26);
            String angle=expression;
            dbg.location(108,10);
            match(input,25,FOLLOW_25_in_rotation743); 
            dbg.location(108,13);
            Vector3d vector_rotation = new Vector3d(Float.valueOf(coordx),Float.valueOf(coordy),Float.valueOf(coordz));
            			      Lib3d.GlSceneGraph.Rotation node_rotation = new Lib3d.GlSceneGraph.Rotation(vector_rotation,Float.valueOf(ang));
            			      currentNode.addChild(node_rotation); 
            			      currentNode = node_rotation; 
            			      String[]rotations = {x,y,z,angle};
            			      rotamap.put(node_rotation,rotations);
            			      stack.push(node_rotation);

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        dbg.location(114, 37);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "rotation");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return ;
    }
    // $ANTLR end "rotation"


    // $ANTLR start "scale"
    // C:\\Users\\quent\\Desktop\\TPcin\\TP2\\XGD.g:116:1: scale : 'Scale' '{' coordx= animation ',' coordy= animation ',' coordz= animation '}' ;
    public final void scale() throws RecognitionException {
        String coordx = null;

        String coordy = null;

        String coordz = null;


        try { dbg.enterRule(getGrammarFileName(), "scale");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(116, 1);

        try {
            // C:\\Users\\quent\\Desktop\\TPcin\\TP2\\XGD.g:116:7: ( 'Scale' '{' coordx= animation ',' coordy= animation ',' coordz= animation '}' )
            dbg.enterAlt(1);
